deeplol/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deeplol
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deeplol
  template:
    metadata:
      labels:
        app: deeplol
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
            - containerPort: 80
